# cody_banks

./: .gitignore  README.md  pyproject.toml  roadmap.md  roadmap2.md  system_runtime.md
.cody/: memory.md
.cody/index/: project_index.json
cody_banks/: __init__.py  agent.py  cli.py  config.py  llm.py  memory.py  permissions.py  roadmap.py  session.py  skill_loader.py  tui.md  workspace.py
cody_banks/prompts/: system.md
cody_banks/skills/: README.md  git.md  local_llm.md  python.md  react.md
cody_banks/tools/: __init__.py  files.py  git.py  index.py  search.py  shell.py
scripts/: start_llm_server.py  start_llm_server.sh
