[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cody-banks"
version = "0.1.0"
description = "A local-first coding agent skeleton."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cody = "cody_banks.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cody_banks*"]

[tool.setuptools.package-data]
cody_banks = ["prompts/*.md", "skills/*.md"]

